--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -21,6 +22,8 @@
     "mongoose": "^7.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "razorpay": "^2.8.6",
+    "twilio": "^4.10.0"
   }
 }
