--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "razorpay": "^2.8.6",
-    "twilio": "^4.10.0"
+    "twilio": "^4.10.0",
+    "voucher-code-generator": "^1.3.0"
   }
 }
