--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.2",
     "pdfkit": "^0.13.0",
     "razorpay": "^1.6.0",
     "twilio": "^4.10.0",
